--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,7 +17,7 @@
     height: 100vh;
     width: 100vw;
     border-radius: 0;
-    background-color: hsl(206deg, 94%, 87%);
+    background-color: hsl(206, 94%, 87%);
   }
 }
 @media only screen and (min-width: 720px) and (max-width: 960px) {
@@ -52,7 +52,7 @@
 }
 
 .selected {
-  background-color: hsl(206deg, 94%, 87%);
-  border-color: hsl(206deg, 94%, 87%);
-  color: hsl(213deg, 96%, 18%);
+  background-color: hsl(206, 94%, 87%);
+  border-color: hsl(206, 94%, 87%);
+  color: hsl(213, 96%, 18%);
 }/*# sourceMappingURL=App.css.map */
