--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -55,4 +55,14 @@
   background-color: hsl(206, 94%, 87%);
   border-color: hsl(206, 94%, 87%);
   color: hsl(213, 96%, 18%);
+}
+
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }/*# sourceMappingURL=App.css.map */
