--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -51,4 +51,13 @@
   color: hsl(213, 96%, 18%);
 }
 
+button{
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
   
