gave loading and intro animations

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -39,6 +39,13 @@
     flex-direction: column;
   }
 }
+.App .loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  color: hsl(213, 96%, 18%);
+}
 
 .App-header {
   background-color: #282c34;
