--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -32,6 +32,13 @@
       padding: 0;
       flex-direction: column;
     }
+    .loading{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateY(-50%) translateX(-50%);
+      color: hsl(213, 96%, 18%);
+    }
 }
   
 .App-header {
