--- a/src/styles/appBody.scss
+++ b/src/styles/appBody.scss
@@ -9,6 +9,7 @@
         position: relative;
     }
     .formBody{
+        // position: absolute;
         height: 100%;
         width: 75%;
         box-sizing: border-box;
